--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,6 +8,37 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "apertura",sans-serif;
 }
 
+/* Header
+-------------------- */
+header.main-header h1 {
+	font-size: 2.5em;
+	text-transform: uppercase;
+	text-align: center;
+	margin: 10px 0 0;
+	padding: 0;
+	line-height: 1.1;
+}
+
+header.main-header h2 {
+	font-size: 1em;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	font-weight: normal;
+}
+
+/* Main Site Navigation
+-------------------- */
+nav.main-nav {
+	text-align: center;
+	margin: 12px 0 0;
+}
+
+nav.main-nav li {
+	border: 1px solid black;
+	padding: 12px 0;
+}
+
 /* Full Articles
 -------------------- */
 .full-article h1 {
