Background and font changes

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,7 @@
 -------------------- */
 body {
 	font-family: "ratio",sans-serif;
+	background: url(../images/bg.png);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -35,8 +36,25 @@ nav.main-nav {
 }
 
 nav.main-nav li {
-	border: 1px solid black;
-	padding: 12px 0;
+	text-transform: ;
+	padding: 0;
+	margin: 0 12px;
+	font-size: 1.1em;
+	display: inline;
+}
+
+.active {
+	border-bottom: 2px solid;
+}
+
+/* Content Area
+-------------------- */
+section.content {
+	background: white;
+	padding: 9px;
+	border-radius: 6px;
+	-webkit-box-shadow: 0px 0px 6px rgba(0,0,0,.5);
+	margin-bottom: 12px;
 }
 
 /* Full Articles
@@ -48,7 +66,7 @@ nav.main-nav li {
 /* Link Articles
 -------------------- */
 .link-article h1 {
-	font-size: 1.1em;
+	font-size: 1.2em;
 }
 
 .link-article a.link-title {
