--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -16,7 +16,7 @@ p {
 /* Header
 -------------------- */
 header.main-header h1 {
-	font-size: 2.5em;
+	font-size: 4rem;
 	text-transform: uppercase;
 	text-align: center;
 	margin: 10px 0 0;
@@ -25,7 +25,7 @@ header.main-header h1 {
 }
 
 header.main-header h2 {
-	font-size: 1em;
+	font-size: 1rem;
 	text-align: center;
 	margin: 0;
 	padding: 0;
@@ -43,7 +43,7 @@ nav.main-nav li {
 	text-transform: ;
 	padding: 0;
 	margin: 0 12px;
-	font-size: 1.1em;
+	font-size: 1.8rem;
 	display: inline;
 }
 
@@ -57,20 +57,27 @@ section.content {
 	margin-bottom: 12px;
 }
 
+.content h1 {
+	margin: 0;
+	padding: 0;
+}
+
 /* Full Articles
 -------------------- */
 .full-article h1 {
-	font-size: 1.7em;
+	font-size: 2.3rem;
 }
 
 /* Link Articles
 -------------------- */
 .link-article h1 {
-	font-size: 1.5rem;
+	font-size: 1.8rem;
+	padding: 0;
+	margin: 0;
 }
 
 .link-article p {
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 }
 
 .link-article a.link-title {
