--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,10 +39,15 @@ nav.main-nav {
 	margin: 12px 0 0;
 }
 
+nav.main-nav ul {
+	margin: 0;
+	padding: 0;
+}
+
 nav.main-nav li {
 	text-transform: ;
 	padding: 0;
-	margin: 0 12px;
+	margin: 0 6px;
 	font-size: 1.8rem;
 	display: inline;
 }
