--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -67,6 +67,12 @@ section.content {
 
 /* Full Articles
 -------------------- */
+article.full-article {
+	border-top: 4px solid #999;
+	padding: 18px 0 0;
+	margin: 0 0 18px;
+}
+
 .full-article h1 {
 	font-size: 2.2rem;
 }
@@ -89,5 +95,4 @@ section.content {
 }
 
 .link-article a.link-title {
-	font-style: italic;
 }
